# biosphere-spatialdata-system

./: .gitignore  LICENSE  README.md  TEST_REPORT-fitToView-fix.md  cad_analysis_report.md  cad_fix_report_2026-05-14.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: cad-rendering-log-optimization-report.md  cad-rendering-performance-fix-report.md  info.md  requirements.md  参考.html  已发布.html  需求.txt  预览.html
docs/20260408/: test.scss  需求.txt
docs/20260414/: 多数据源集成设计方案.md
docs/20260417/: Kafka.txt  (+11 more)
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  editor-window.json  live-window.json  preview-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/auth/: mod.rs
src-tauri/src/application/icons/: mod.rs
src-tauri/src/application/mqtt/: mod.rs  service.rs
src-tauri/src/cad_runtime/: block_table.rs  cadbin_spec.rs  cadbin_writer.rs  chunk_codec.rs  mod.rs  rtree.rs  string_pool.rs
src-tauri/src/commands/: asset.rs  auth.rs  cad.rs  component_plugin.rs  datasource.rs  icons.rs  logger.rs  map_library.rs  mod.rs  mqtt.rs  scene.rs  settings.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/auth/: mod.rs  models.rs  repository.rs
src-tauri/src/domain/cad/: bounds.rs  mod.rs  models.rs
src-tauri/src/domain/component_plugin/: mod.rs  models.rs  repository.rs
src-tauri/src/domain/datasource/: mod.rs  models.rs
src-tauri/src/domain/icons/: mod.rs  models.rs
src-tauri/src/domain/map_library/: models.rs
src-tauri/src/domain/scene/: mod.rs  models.rs
src-tauri/src/infrastructure/database/: auth_repository.rs  connection.rs  datasource_repository.rs  icon_repository.rs  map_library_repository.rs  migration.rs  mod.rs  scene_repository.rs  settings_repository.rs
(+264 files in other folders)
